--- a/app/src/main/res/layout/fragment_attendance_history.xml
+++ b/app/src/main/res/layout/fragment_attendance_history.xml
@@ -4,16 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Attendance History"
-        android:textSize="24sp"
-        android:padding="16dp" />
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewAttendanceHistory"
+        android:id="@+id/recyclerViewAttendance"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:padding="8dp" />
 </LinearLayout>
